name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/euler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Math
                     , Lib.Misc
                     , Problems.Execute
                     , Problems.Problem1
                     , Problems.Problem2
                     , Problems.Problem3
                     , Problems.Problem4
                     , Problems.Problem5
                     , Problems.Problem6
                     , Problems.Problem7
                     , Problems.Problem8
                     , Problems.Problem9
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
  default-language:    Haskell2010

executable euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarangj/eulerhs
